Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -309,7 +309,7 @@ Combining this with the mass term in \EquationRef{eqn:SM Lagrangian}, the left h
 \end{equation}
 where the factor of 1/2 arises due to double counting. As before, in order to get the weak isospin to sum to zero the Higgs field needs to be introduced, but in this case a Higgs triplet (instead of doublet) is required. However, within the \gls{sm}, a Higgs triplet isn't allowed and there doesn't seem to be any experimental evidence for one either. 
 
-\subsubsection{Seesaw mechanism}
+\subsubsection{Seesaw mechanism}\label{sec:seesaw_mechanism}
 In the general case, we have four neutrino fields, a left and right handed one plus a charge conjugate version of each. This allows us to create a left and right Majorana mass term akin to \EquationRef{eqn:Majorana mass term} and a regular and charge conjugated Dirac mass akin to \EquationRef{eqn:Dirac mass term} (the Dirac mass, $m_D$ is the same in both cases). The mass component of the Lagrangian, $L_{mass}$, may be written as a matrix equation, 
 \begin{equation}
     L_{mass} = \frac{1}{2} 
