--- a/glossary.tex
+++ b/glossary.tex
@@ -4,8 +4,10 @@
 
 \newacronym{adc}{ADC}{Analog Digital Converter}
 \newacronym{apa}{APA}{Andode Plane Assembly}
+\newacronym{arapuca}{ARAPUCA}{Argon R\&D Advanced Program at UniCAmp}
 \newacronym{argoneut}{ArgoNeuT}{Argon Neutrino Test Stand}
 \newacronym{bnb}{BNB}{Booster Neutrino Beam}
+\newacronym{bsm}{BSM}{Beyond Standard Model}
 \newacronym{cc}{CC}{Charged Current}
 \newacronym{ccqe}{CCQE}{Charged Current Quasi Elastic}
 \newacronym{cp}{CP}{charge-parity}
@@ -33,18 +35,22 @@
 \newacronym{nist}{NIST}{National Institute of Standards and Technology}
 \newacronym{p}{P}{parity}
 \newacronym{pdg}{PDG}{Particle Data Group}
+\newacronym{pds}{PDS}{Photon Detection System}
 \newacronym{pmns}{PMNS}{Pontecorvo-Maki-Nakagawa-Sakata}
 \newacronym{pmt}{PMT}{Photo Multiplier Tube}
 \newacronym{sage}{SAGE}{Soviet-American Gallium Experiment}
 \newacronym{sbn}{SBN}{Short Baseline Neutrino}
 \newacronym{sbnd}{SBND}{Short Baseline Near Detector}
 \newacronym{sce}{SCE}{Space Charge Effect}
+\newacronym{sipm}{SiPM}{Silicon Photomultiplier}
 \newacronym{sk}{SK}{Super Kamiokande}
 \newacronym{sm}{SM}{Standard Model}
 \newacronym{sno}{SNO}{Sudbury Neutrino Observatory}
 \newacronym{sp}{SP}{Space Point}
 \newacronym{tla}{TLA}{Three Letter Acronym}
+\newacronym{tpb}{TPB}{Tetraphenyl Butadiene}
 \newacronym{tpc}{TPC}{Time Projection Chamber}
+\newacronym{vuv}{VUV}{Vacuum Ultra Violet}
 
 
 
