--- a/mythesis.bib
+++ b/mythesis.bib
@@ -28,6 +28,20 @@
       howpublished = {\href{https://arxiv.org/abs/1503.01520}{arXiv:1503.01520}},
 }
 
+@article{SBN_paper,
+   title={The Short-Baseline Neutrino Program at Fermilab},
+   volume={69},
+   ISSN={1545-4134},
+   url={http://dx.doi.org/10.1146/annurev-nucl-101917-020949},
+   DOI={10.1146/annurev-nucl-101917-020949},
+   number={1},
+   journal={Annual Review of Nuclear and Particle Science},
+   publisher={Annual Reviews},
+   author={Machado, Pedro A.N. and Palamara, Ornella and Schmitz, David W.},
+   year={2019},
+   month={Oct},
+   pages={363–387} }
+
 
 @article{PDG_2020,
     author = "Zyla, P.A. and others",
@@ -535,6 +549,47 @@ year = {1913}
    pages={160–170}
 }
 
+@article{LArTPC_review,
+author = {Majumdar, Krishanu and Mavrokoridis, Konstantinos},
+year = {2021},
+month = {03},
+pages = {2455},
+title = {Review of Liquid Argon Detector Technologies in the Neutrino Sector},
+volume = {11},
+journal = {Applied Sciences},
+doi = {10.3390/app11062455}
+}
+
+@article{ARAPUCA,
+	doi = {10.1088/1748-0221/11/02/c02004},
+	url = {https://doi.org/10.1088/1748-0221/11/02/c02004},
+	year = 2016,
+	month = {feb},
+	publisher = {{IOP} Publishing},
+	volume = {11},
+	number = {02},
+	pages = {C02004--C02004},
+	author = {A.A. Machado and E. Segreto},
+	title = {{ARAPUCA} a new device for liquid argon scintillation light detection},
+	journal = {Journal of Instrumentation},
+	abstract = {We present a totally innovative device for the detection of liquid argon scintillation light, that has been named ARAPUCA (Argon R&D Advanced Program at UniCAmp). It is composed of a passive light collector and of active devices. The latters are standard SiPMs that operate at liquid argon temperature, while the passive collector is based on a new technology, never explored in this field before. It is a photon trap, that allows to collect light with extremely high efficiency. The total detection efficiency of the device can be tuned by modifying the ratio between the area of the active devices (SiPM) and the area of the optical window. For example, it will allow to reach a detection efficiency at the level of 1\% on a surface of 50 × 50 cm2 with an active coverage of 2 × 2 cm2 (two/three large area SiPM). It is also a cheap device, since the major part of its cost is represented by the active devices. For these reason this appears to be the ideal device for scintillation light detection in large Time Projection Chambers. With appropriate modifications it can be used also in next generation Dark Matter detectors.}
+}
+
+@article{X-ARAPUCA,
+   title={The X-ARAPUCA: an improvement of the ARAPUCA device},
+   volume={13},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/13/04/C04026},
+   DOI={10.1088/1748-0221/13/04/c04026},
+   number={04},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={Machado, A.A. and Segreto, E. and Warner, D. and Fauth, A. and Gelli, B. and Máximo, R. and Pissolatti, A. and Paulucci, L. and Marinho, F.},
+   year={2018},
+   month={Apr},
+   pages={C04026–C04026} }
+
+
 @article{microboone_detector,
    title={Design and construction of the MicroBooNE detector},
    volume={12},
@@ -581,6 +636,50 @@ year = {1913}
       year          = "2017",
       url           = "https://cds.cern.ch/record/2256748",
 }
+
+@article{light_dark_matter,
+  title = {Probing sub-GeV dark sectors via high energy proton beams at LBNF/DUNE and MiniBooNE},
+  author = {Frugiuele, Claudia},
+  journal = {Phys. Rev. D},
+  volume = {96},
+  issue = {1},
+  pages = {015029},
+  numpages = {5},
+  year = {2017},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.96.015029},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.96.015029}
+}
+
+@article{dark_neutrino,
+  title = {Dark Neutrino Portal to Explain MiniBooNE Excess},
+  author = {Bertuzzo, Enrico and Jana, Sudip and Machado, Pedro A. N. and Zukanovich Funchal, Renata},
+  journal = {Phys. Rev. Lett.},
+  volume = {121},
+  issue = {24},
+  pages = {241801},
+  numpages = {5},
+  year = {2018},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.121.241801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.121.241801}
+}
+
+@article{MeV_scale_sterile_neutrino,
+   title={MeV-scale sterile neutrino decays at the Fermilab Short-Baseline Neutrino program},
+   volume={2017},
+   ISSN={1029-8479},
+   url={http://dx.doi.org/10.1007/JHEP04(2017)102},
+   DOI={10.1007/jhep04(2017)102},
+   number={4},
+   journal={Journal of High Energy Physics},
+   publisher={Springer Science and Business Media LLC},
+   author={Ballett, Peter and Pascoli, Silvia and Ross-Lonergan, Mark},
+   year={2017},
+   month={Apr} }
+
 
 % Shower reco stuff
 @article{ArgoNeuT_ESTAR_paper,
